force-app/main/default/objects/DriverMaster__c/DriverMaster__c.object-meta.xml
<CustomObject>
    <label>ドライバーマスタ</label>
    <nameField>
        <label>ドライバー名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>