force-app/main/default/objects/DriverMaster__c/fields/DayOfWeek_F__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek_F__c</fullName>
    <formula>IF(Monday__c, &apos;月;&apos;, &apos;&apos;) &amp;
IF(Tuesday__c, &apos;火;&apos;, &apos;&apos;) &amp;
IF(Wednesday__c, &apos;水;&apos;, &apos;&apos;) &amp;
IF(Thursday__c, &apos;木;&apos;, &apos;&apos;) &amp;
IF(Friday__c, &apos;金;&apos;, &apos;&apos;) &amp;
IF(Saturday__c, &apos;土;&apos;, &apos;&apos;) &amp;
IF(Sunday__c, &apos;日;&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>曜日</label>
    <type>Text</type>
</CustomField>