force-app/main/default/objects/DriverMaster__c/fields/DeliveryDestinationTeam__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestinationTeam__c</fullName>
    <label>所属</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LargeLicense</fullName>
                <default>true</default>
                <label>一般大型</label>
            </value>
            <value>
                <fullName>TRLicense</fullName>
                <label>一般TR</label>
            </value>
            <value>
                <fullName>ChateraiseLarge</fullName>
                <label>シャトレーゼ大型</label>
            </value>
            <value>
                <fullName>ChateraiseTR</fullName>
                <label>シャトレーゼTR</label>
            </value>
            <value>
                <fullName>McDonalds</fullName>
                <label>マック</label>
            </value>
            <value>
                <fullName>Starbucks</fullName>
                <label>スターバックス</label>
            </value>
            <value>
                <fullName>Lawson</fullName>
                <label>ローソン</label>
            </value>
            <value>
                <fullName>OfficeWork</fullName>
                <label>事務</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
                <label>倉庫</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>