force-app/main/default/objects/DriverMaster__c/fields/DispatchPDFLineNumber__c.field-meta.xml
<CustomField>
    <fullName>DispatchPDFLineNumber__c</fullName>
    <label>配車表の行</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>