force-app/main/default/objects/DriverMaster__c/fields/DispatchPDFPageNumber__c.field-meta.xml
<CustomField>
    <fullName>DispatchPDFPageNumber__c</fullName>
    <label>配車表のページ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>