force-app/main/default/objects/DriverMaster__c/fields/DriversLicense__c.field-meta.xml
<CustomField>
    <fullName>DriversLicense__c</fullName>
    <label>免許</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trailer</fullName>
                <label>トレーラー</label>
            </value>
            <value>
                <fullName>Large</fullName>
                <default>true</default>
                <label>大型</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>中型</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>