force-app/main/default/objects/DriverMaster__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>無効offにしたとき、無効理由をクリア</description>
    <label>無効</label>
    <type>Checkbox</type>
</CustomField>