force-app/main/default/objects/DriverMaster__c/fields/InactiveReason__c.field-meta.xml
<CustomField>
    <fullName>InactiveReason__c</fullName>
    <description>無効onにしたとき、無効理由必ず記入する</description>
    <label>無効理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>