force-app/main/default/objects/DriverMaster__c/fields/OverwriteDispatch__c.field-meta.xml
<CustomField>
    <fullName>OverwriteDispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>定休日設定後、自動的にFalseへ戻せる仕組みがある</description>
    <inlineHelpText>onにして保存すると、配車した情報が定休に上書き保存できます</inlineHelpText>
    <label>配車を上書き更新</label>
    <type>Checkbox</type>
</CustomField>