force-app/main/default/objects/DriverMaster__c/fields/OverwriteDispatchDateTime__c.field-meta.xml
<CustomField>
    <fullName>OverwriteDispatchDateTime__c</fullName>
    <description>配車を上書き更新項目がTrueに変更したら自動的にNowの時間を設定。</description>
    <label>配車を上書き時間</label>
    <type>DateTime</type>
</CustomField>