force-app/main/default/objects/DriverMaster__c/fields/Precautions__c.field-meta.xml
<CustomField>
    <fullName>Precautions__c</fullName>
    <label>注意事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>