force-app/main/default/objects/DriverMaster__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>土曜日</label>
    <type>Checkbox</type>
</CustomField>