force-app/main/default/objects/DriverMaster__c/fields/TransportationArea__c.field-meta.xml
<CustomField>
    <fullName>TransportationArea__c</fullName>
    <label>運送範囲</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InPrefecture</fullName>
                <label>県内</label>
            </value>
            <value>
                <fullName>OutOfPrefecture</fullName>
                <default>true</default>
                <label>県外</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>