force-app/main/default/objects/DriverMaster__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>TRAFFICS2番号を入力して下さい</inlineHelpText>
    <label>TRAFFICS2番号</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>