force-app/main/default/objects/DriverMaster__c/fields/WeeklyOffStartDate__c.field-meta.xml
<CustomField>
    <fullName>WeeklyOffStartDate__c</fullName>
    <label>定休日適用開始日</label>
    <type>Date</type>
</CustomField>