force-app/main/default/objects/DriverMaster__c/validationRules/WeeklyOffStartDateSet.validationRule-meta.xml
<ValidationRule>
    <fullName>WeeklyOffStartDateSet</fullName>
    <active>true</active>
    <description>「定休日適用開始日」を変更する際、7日以後かつ、60日以内の日付を設定、それ以外の場合エラーを出す。

※1 全て、月曜日～日曜日の状態が変更された際も上記のチェックを行う
※2「無効」フラグをオンからオフに変更した場合、上記も判断する</description>
    <errorConditionFormula>/* 判定条件 */
(
  /*定休日適用開始日の変更*/
  ISCHANGED(WeeklyOffStartDate__c) || 
  /*曜日の変更*/
  (
    ISCHANGED(Monday__c) ||
    ISCHANGED(Tuesday__c) ||
    ISCHANGED(Wednesday__c) ||
    ISCHANGED(Thursday__c) ||
    ISCHANGED(Friday__c) ||
    ISCHANGED(Saturday__c) ||
    ISCHANGED(Sunday__c)
  ) ||
  /*無効がオフに変更*/
  (
    ISCHANGED(Inactive__c) &amp;&amp;
    NOT(Inactive__c)
  )
) &amp;&amp;
/* 判定項目 */
NOT(ISBLANK(WeeklyOffStartDate__c)) &amp;&amp;
(
  WeeklyOffStartDate__c &lt; TODAY() + 7 ||
  WeeklyOffStartDate__c &gt; TODAY() + 60
)</errorConditionFormula>
    <errorDisplayField>WeeklyOffStartDate__c</errorDisplayField>
    <errorMessage>「定休日適用開始日」を7日以降かつ、60日以内の日付に設定してください。</errorMessage>
</ValidationRule>