force-app/main/default/objects/DriverMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DeliveryDestinationTeam__c</columns>
    <columns>TransportationArea__c</columns>
    <columns>DayOfWeek_F__c</columns>
    <columns>Precautions__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>